--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -108,8 +108,8 @@
                         <img src="/static/img/crop-carrot.webp" alt="Carrot" class="w-full h-full object-contain" id="plant-image">
                     </div>
                     <div class="mb-2 text-lg font-semibold text-yellow-400" id="result-title">Carrot | 0.240kg | would cost around:</div>
-                    <div class="text-green-400 font-bold text-3xl" id="result-value">🌿 ≈$18
-                        <div class="text-sm text-gray-300 mt-1" id="result-sheckles">(18.00)</div>
+                    <div class="text-green-400 font-bold text-3xl" id="result-value">🌿
+                        <div class="text-sm text-gray-300 mt-1" id="result-sheckles"></div>
                     </div>
                     
                     <!-- Total Value Display -->
